...
                self.sheet = .consumptionSummary()
            } label: {
                Label(
                    "View your energy labels",
                    systemImage: "chart.bar.xaxis"
                )
                .accessibilityIdentifier("ViewEnergyLabels")
            }
            Button {
                self.sheet = .consumptionForm()
            } label: {
                Label(
                    "Add a consumption",
                    systemImage: "plus.circle.fill"
                )
                .accessibilityIdentifier("AddConsumption")
            }
            NavigationLink(
                destination: RecurringConsumptionList(
                    user: self.user
                )
            ) {
...
