...
                    )
                    .tabItem {
                        Label(
                            "Home",
                            systemImage: "house"
                        )
                        .accessibilityIdentifier("HomeTab")
                    }
                    if (try? self.firebase.city?.get())?.hasPhotovoltaics == true {
                        PhotovoltaicScreen(
                            user: user
                        )
                        .tabItem {
...
                    SettingsScreen()
                        .tabItem {
                            Label(
                                "Settings",
                                systemImage: "gear"
                            )
                            .accessibilityIdentifier("SettingsTab")
                        }
                }
                .onAppear {
                    self.presentLegalUpdateConsentFormIfNeeded(
                        user: user,
                        latestLegalDocumentsVersion: self.latestLegalDocumentsVersion
...
